--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="font_heart">&#xE87D;</string>
+    <string name="font_comment">&#xE0B9;</string>
+    <string name="font_repost">&#xE050;</string>
+
     <string name="screen_name_news">news</string>
 </resources>
